--- a/firstpage.html
+++ b/firstpage.html
@@ -19,7 +19,11 @@
 	<th>Airport Code</th>
 	<th>Common Name/City</th>
 </tr>
-<h1> CHANGE 1 <h2>
+<h1> CHANGE 1 </h1>
+
+<h1> CHANGE 2 </h1>
+
+
 <tr>
 	<td>CWA</td>
 	<td> Central Wisconsin Airport</td>
